--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
       type="image/x-icon"
     />
   </head>
-  <body class="bg-gradient-texture font-semibold text-slate-50">
+  <body
+    class="bg-gradient-texture font-semibold text-slate-50 overflow-hidden overflow-y-auto"
+  >
+    <div class="background">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <nav
       class="fixed top-0 translate-x-1/2 right-1/2 rounded-b-lg text-slate-50 shadow shadow-sky-500/50"
     >
       <ul class="flex justify-center">
         <li class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110">
-          <a href="#home" class="hover:text-cyan-500">Accueil</a>
+          <a href="#home" class="hover:text-cyan-500">Home</a>
         </li>
         <li
           class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 max-sm:hidden"
@@ -113,9 +123,7 @@
             <div
               class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
             >
-              <h2 class="m-2 text-indigo-300 text-center">
-                Who i am<i class="fa-solid fa-question"></i>
-              </h2>
+              <h2 class="m-2 text-indigo-300 text-center text-xl">My story</h2>
               <p class="m-2">
                 After several years as a baker, I decided to carry on my passion
                 for IT.
@@ -124,19 +132,17 @@
                 I am currently in training to become FullStack Developer with a
                 professional title Bac +2.
               </p>
+              <p class="m-2">I will continue to Bac +3 in 2024 - 2025.</p>
               <p
                 class="m-2 text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
               >
-                <i class="fa-solid fa-circle-chevron-right"></i> I am looking
-                for internship From April 08th to June 14th 2024
+                I am looking for internship From April 08th to June 14th 2024
               </p>
-
-              <p class="m-2">I will continue to Bac +3 in 2024 - 2025.</p>
             </div>
             <div
               class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
             >
-              <h2 class="text-indigo-300 text-center m-2">
+              <h2 class="text-indigo-300 text-center m-2 text-xl">
                 Technologies <i class="fa-solid fa-microchip"></i>
               </h2>
               <div class="flex justify-center m-2">
@@ -202,10 +208,7 @@
             <div
               class="bg-transparent row-span-1 col-span-1 p-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
             >
-              <h2 class="text-indigo-300 text-center m-2">
-                Qui suis-je vraiment
-                <i class="fa-regular fa-face-grin-beam-sweat"></i>
-              </h2>
+              <h2 class="text-indigo-300 text-center m-2">Who am I</h2>
               <p class="m-2">
                 Je suis quelqu'un de curieux, qui aime l'échange d'idée en
                 équipe. Je lève de la fonte régulèrement
@@ -216,7 +219,7 @@
       </div>
       <!-- Fin partie mobile -->
     </div>
-    <div class="mousedown ">
+    <div class="mousedown">
       <a href="#introduction_mobile">
         <i class="fa-solid fa-caret-down sm:hidden text-slate-50"></i
       ></a>
@@ -242,30 +245,31 @@
           <div
             class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 text-lg"
           >
-            <h2 class="m-2 mb-10 text-indigo-300 text-center">
-              Qui suis-je <i class="fa-solid fa-question"></i>
+            <h2 class="m-2 mb-10 text-indigo-300 text-center text-xl">
+              My story
             </h2>
-            <p class="m-2">
+            <p class="m-2 text-lg">
               After several years as a baker, I decided to carry on my passion
               for IT.
             </p>
-            <p class="m-2">
-              I am currently in training to become FullStack Developer with a
+            <p class="m-2 text-lg">
+              I am currently in training to become Fullstack Developer with a
               professional title Bac +2.
             </p>
+            <p class="m-2 text-lg">I will continue to Bac +3 in 2024 - 2025.</p>
+            <br>
+            <br>
             <p
-              class="m-2 text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
+              class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
             >
-              <i class="fa-solid fa-circle-chevron-right"></i> I am looking for
+              I am looking for
               internship From April 08th to June 14th 2024
             </p>
-
-            <p class="m-2">I will continue to Bac +3 in 2024 - 2025.</p>
           </div>
           <div
             class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
           >
-            <h2 class="text-indigo-300 text-center m-2">
+            <h2 class="text-indigo-300 text-center m-2 text-xl">
               Technologies <i class="fa-solid fa-microchip"></i>
             </h2>
             <div class="grid items-center">
@@ -346,14 +350,11 @@
           <div
             class="bg-transparent row-span-1 col-span-1 p-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
           >
-            <h2 class="text-indigo-300 text-center m-2">
-              Qui suis-je vraiment
+            <h2 class="text-indigo-300 text-center m-2 text-xl">
+              Who am I
               <i class="fa-regular fa-face-grin-beam-sweat"></i>
             </h2>
-            <p class="m-2">
-              Je suis quelqu'un de curieux, qui aime l'échange d'idée en équipe.
-              Je lève de la fonte régulèrement
-            </p>
+            <p class="m-2 text-lg"></p>
           </div>
         </div>
       </div>
@@ -433,7 +434,7 @@
         </div>
       </div>
       <div class="grid align-items lg:m-30">
-        <h3 class="text-center text-slate-50" id="contact">Contacte me</h3>
+        <h3 class="text-center text-slate-50" id="contact">Contact me</h3>
         <div class="social text-center m-10">
           <a
             class="sm:m-10 m-1"
