--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
           <a href="#home" class="hover:text-cyan-500">Home</a>
         </li>
         <li
-          class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 max-sm:hidden"
+          class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 max-sm:hidden hover:text-cyan-500"
         >
           <a href="#introduction_desktop">Introduction</a>
         </li>
         <li
-          class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 sm:hidden"
+          class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 sm:hidden hover:text-cyan-500"
         >
           <a href="#introduction_mobile">Introduction</a>
         </li>
-        <li class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110">
+        <li class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 hover:text-cyan-500">
           <a href="#projects">Projects</a>
         </li>
         <li
-          class="whitespace-nowrap my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110"
+          class="whitespace-nowrap my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 hover:text-cyan-500"
         >
           <a href="./index_french.html">Français</a>
           <i class="fa-solid fa-up-right-from-square"></i>
@@ -62,14 +62,14 @@
     <div class="max-sm:pt-10 text-slate-50" id="home">
       <div class="grid content-center mb-10 sm:h-screen">
         <div
-          class="flex justify-center items-center max-sm:flex-col-reverse text-indigo-300 max-sm:h-screen"
+          class="flex justify-center items-center max-sm:flex-col-reverse text-slate-50 max-sm:h-screen"
         >
           <div class="grid content-center p-10">
             <h1 class="text-slate-50 text-2xl mb-2">Hey!</h1>
             <h2 class="text-2xl mb-2">
               My name is
               <mark
-                class="px-2 text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
+                class="px-2 text-slate-50 bg-sky-800 rounded dark:bg-blue-500"
                 >Cédric.</mark
               >
             </h2>
@@ -87,10 +87,10 @@
             <br />
             <a href="./Portfolio_v3t/src/docs/cedric_cv.pdf" target="_blank"
               ><button
-                id="myresume"
-                type="button"
-                class="text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 ease-in"
-              >
+              id="myresume"
+              type="button"
+              class="text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 hover:bg-sky-800 hover:border-slate-50 ease-in"
+            >
                 <span class="text-lg"
                   >My Resume <i class="text-lg fa-solid fa-download"></i
                 ></span></button
@@ -112,7 +112,7 @@
       >
         <h1 class="text-center">
           <mark
-            class="m-5 px-2 text-2xl text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
+            class="m-5 px-2 text-2xl text-slate-50 bg-sky-800 rounded dark:bg-blue-500"
             >Introduction</mark
           >
         </h1>
@@ -123,7 +123,9 @@
             <div
               class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
             >
-              <h2 class="m-2 text-indigo-300 text-center text-xl">My story</h2>
+            <h2
+            class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
+          >My story</h2>
               <p class="m-2">
                 After several years as a baker, I decided to carry on my passion
                 for IT.
@@ -142,7 +144,8 @@
             <div
               class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
             >
-              <h2 class="text-indigo-300 text-center m-2 text-xl">
+              <h2           class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+              >
                 Technologies <i class="fa-solid fa-microchip"></i>
               </h2>
               <div class="flex justify-center m-2">
@@ -208,11 +211,18 @@
             <div
               class="bg-transparent row-span-1 col-span-1 p-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
             >
-              <h2 class="text-indigo-300 text-center m-2">Who am I</h2>
+            <h2
+            class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+          >Who I am</h2>
               <p class="m-2">
                 Je suis quelqu'un de curieux, qui aime l'échange d'idée en
                 équipe. Je lève de la fonte régulèrement
               </p>
+              <h2
+                class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
+              >
+                Centres d'intérêts
+              </h2>
             </div>
           </div>
         </div>
@@ -234,7 +244,7 @@
     >
       <h1 class="flex items-center justify-center" id="introduction">
         <mark
-          class="mt-10 px-2 text-2xl text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
+          class="mt-10 px-2 text-2xl text-slate-50 bg-sky-800 rounded dark:bg-blue-500"
           >Introduction</mark
         >
       </h1>
@@ -245,7 +255,9 @@
           <div
             class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 text-lg"
           >
-            <h2 class="m-2 mb-10 text-indigo-300 text-center text-xl">
+          <h2
+          class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
+        >
               My story
             </h2>
             <p class="m-2 text-lg">
@@ -269,8 +281,9 @@
           <div
             class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
           >
-            <h2 class="text-indigo-300 text-center m-2 text-xl">
-              Technologies <i class="fa-solid fa-microchip"></i>
+          <h2
+          class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+        >              Technologies <i class="fa-solid fa-microchip"></i>
             </h2>
             <div class="grid items-center">
               <div class="flex justify-center m-2">
@@ -350,11 +363,17 @@
           <div
             class="bg-transparent row-span-1 col-span-1 p-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
           >
-            <h2 class="text-indigo-300 text-center m-2 text-xl">
-              Who am I
-              <i class="fa-regular fa-face-grin-beam-sweat"></i>
+          <h2
+          class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+        >              Who am I
+              
             </h2>
             <p class="m-2 text-lg"></p>
+            <h2
+            class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
+          >
+            Centres d'intérêts
+          </h2>
           </div>
         </div>
       </div>
@@ -365,7 +384,7 @@
     <div id="projects" class="text-slate-50">
       <h2 class="text-center p-10">
         <mark
-          class="px-2 text-2xl text-slate-50 bg-blue-600 rounded dark:bg-blue-500"
+          class="px-2 text-2xl text-slate-50 bg-sky-800 rounded dark:bg-blue-500"
           >Projects in progress</mark
         >
       </h2>
@@ -378,59 +397,59 @@
         >
           <div class="inline">
             <h2 class="text-center pb-5">HBLM</h2>
-            <span class="text-indigo-300">Type:</span> <span>Website</span>
-            <br /><span class="text-indigo-300">For:</span>
+            <span class="text-sky-800">Type:</span> <span>Website</span>
+            <br /><span class="text-sky-800">For:</span>
             <span>Sport Association</span><br />
-            <span class="text-indigo-300">Tech:</span>
-            <span>HTML/SASS/JS</span> <br /><span class="text-indigo-300"
+            <span class="text-sky-800">Tech:</span>
+            <span>HTML/SASS/JS</span> <br /><span class="text-sky-800"
               >Github:</span
             >
             <a href="https://github.com/CedricSanchezGithub/" target="_blank"
               ><i
-                class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-blue-600"
+                class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
               >
               </i></a
             ><br />
-            <span class="text-indigo-300">Statuts:</span> En production(Beta)
+            <span class="text-sky-800">Statuts:</span> En production(Beta)
           </div>
         </div>
         <div
           class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
         >
           <h2 class="text-center pb-5">Bagueton (App)</h2>
-          <span class="text-indigo-300">Type:</span> <span>Android App</span
+          <span class="text-sky-800">Type:</span> <span>Android App</span
           ><br />
-          <span class="text-indigo-300">For:</span> <span>Training</span>
+          <span class="text-sky-800">For:</span> <span>Training</span>
           <br />
-          <span class="text-indigo-300">Tech:</span><span> Kotlin</span><br />
-          <span class="text-indigo-300">Github:</span>
+          <span class="text-sky-800">Tech:</span><span> Kotlin</span><br />
+          <span class="text-sky-800">Github:</span>
           <a href="https://github.com/CedricSanchezGithub/HBLM2" target="_blank"
             ><i
-              class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-blue-600"
+              class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
             >
             </i></a
           ><br />
-          <span class="text-indigo-300">Statuts:</span> Prototype
+          <span class="text-sky-800">Statuts:</span> Prototype
         </div>
         <div
           class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
         >
           <h2 class="text-center pb-5">Bagueton</h2>
-          <span class="text-indigo-300">Type:</span> <span> Website</span>
-          <br /><span class="text-indigo-300">For:</span
+          <span class="text-sky-800">Type:</span> <span> Website</span>
+          <br /><span class="text-sky-800">For:</span
           ><span> Training (Promotional)</span> <br /><span
-            class="text-indigo-300"
+            class="text-sky-800"
             >Tech:</span
           ><span> Vuejs, TailwindCSS</span><br />
-          <span class="text-indigo-300">Github: </span
+          <span class="text-sky-800">Github: </span
           ><a
             href="https://github.com/CedricSanchezGithub/fil_rouge"
             target="_blank"
             ><i
-              class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-blue-600"
+              class="fa-brands fa-github text-xl hover:scale-125 ease-out duration-300 text-sky-800"
             ></i></a
           ><br />
-          <span class="text-indigo-300">Statuts: </span> Prototype
+          <span class="text-sky-800">Statuts: </span> Prototype
         </div>
       </div>
       <div class="grid align-items lg:m-30">
@@ -441,7 +460,7 @@
             target="_blank"
             href="https://www.linkedin.com/in/c%C3%A9dric-sanchez-902257277/"
             ><i
-              class="fa-brands fa-linkedin text-3xl hover:scale-125 ease-out duration-300 text-blue-600"
+              class="fa-brands fa-linkedin text-3xl hover:scale-125 ease-out duration-300 text-sky-800"
             ></i
           ></a>
           <a
@@ -449,7 +468,7 @@
             target="_blank"
             href="https://github.com/CedricSanchezGithub"
             ><i
-              class="fa-brands fa-github text-3xl hover:scale-125 ease-out duration-300 text-blue-600"
+              class="fa-brands fa-github text-3xl hover:scale-125 ease-out duration-300 text-sky-800"
             ></i
           ></a>
           <a
@@ -457,12 +476,12 @@
             href="https://discordapp.com/users/25399227543938"
             target="_blank"
             ><i
-              class="fa-brands fa-discord text-3xl hover:scale-125 ease-out duration-300 text-blue-600"
+              class="fa-brands fa-discord text-3xl hover:scale-125 ease-out duration-300 text-sky-800"
             ></i
           ></a>
           <a class="sm:m-10 m-1" href="mailto:sanchez.cedric.pro@gmail.com"
             ><i
-              class="fa-solid fa-at text-3xl hover:scale-125 ease-out duration-300 text-blue-600"
+              class="fa-solid fa-at text-3xl hover:scale-125 ease-out duration-300 text-sky-800"
             ></i
           ></a>
         </div>
