update index.html and index_french.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <span></span>
     </div>
     <nav
-      class="fixed top-0 translate-x-1/2 right-1/2 rounded-b-lg text-slate-50 shadow shadow-sky-500/50"
+      class="fixed top-0 translate-x-1/2 right-1/2 rounded-b-lg text-slate-50 shadow shadow-sky-500/50 max-md:w-full"
     >
       <ul class="flex justify-center">
         <li class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110">
@@ -47,7 +47,9 @@
         >
           <a href="#introduction_mobile">Introduction</a>
         </li>
-        <li class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 hover:text-cyan-500">
+        <li
+          class="my-2 max-sm:mx-5 sm:mx-10 duration-300 hover:scale-110 hover:text-cyan-500"
+        >
           <a href="#projects">Projects</a>
         </li>
         <li
@@ -87,10 +89,10 @@
             <br />
             <a href="./Portfolio_v3t/src/docs/cedric_cv.pdf" target="_blank"
               ><button
-              id="myresume"
-              type="button"
-              class="text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 hover:bg-sky-800 hover:border-slate-50 ease-in"
-            >
+                id="myresume"
+                type="button"
+                class="text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 duration-300 font-medium text-sm px-5 py-2.5 text-center me-2 mb-2 w-30 hover:scale-110 hover:bg-sky-800 hover:border-slate-50 ease-in"
+              >
                 <span class="text-lg"
                   >My Resume <i class="text-lg fa-solid fa-download"></i
                 ></span></button
@@ -123,20 +125,22 @@
             <div
               class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
             >
-            <h2
-            class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
-          >My story</h2>
-              <p class="m-2">
+              <h2
+                class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
+              >
+                My story
+              </h2>
+              <p class="m-2 text-lg">
                 After several years as a baker, I decided to carry on my passion
                 for IT.
               </p>
-              <p class="m-2">
+              <p class="m-2 text-lg">
                 I am currently in training to become FullStack Developer with a
                 professional title Bac +2.
               </p>
-              <p class="m-2">I will continue to Bac +3 in 2024 - 2025.</p>
+              <p class="m-2 text-lg">I will continue to Bac +3 in 2024 - 2025.</p>
               <p
-                class="m-2 text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
+                class="m-2 text-lg text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
               >
                 I am looking for internship From April 08th to June 14th 2024
               </p>
@@ -144,7 +148,8 @@
             <div
               class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
             >
-              <h2           class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+              <h2
+                class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
               >
                 Technologies <i class="fa-solid fa-microchip"></i>
               </h2>
@@ -211,18 +216,28 @@
             <div
               class="bg-transparent row-span-1 col-span-1 p-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
             >
-            <h2
-            class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
-          >Who I am</h2>
-              <p class="m-2">
-                Je suis quelqu'un de curieux, qui aime l'échange d'idée en
-                équipe. Je lève de la fonte régulèrement
+              <h2
+                class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+              >
+                Who I am
+              </h2>
+              <p class="p-2 m-2 text-lg text-center">
+                <span class="my-5 p-2">Curiosity</span>
+                <span class="my-5 p-2 whitespace-nowrap">Team spirit</span>
+                <span class="my-5 p-2">Good teacher </span>
+                <span class="m-5 p-2">Serious</span>
               </p>
               <h2
                 class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
               >
-                Centres d'intérêts
+                Hobbies and interests
               </h2>
+              <p class="p-2 m-2 text-lg text-center">
+                <span class="my-5 p-2">Weightlifting</span>
+                <span class="my-5 p-2">Mountain</span>
+                <span class="my-5 p-2">New technologies</span>
+                <span class="my-5 p-2">Sciences</span>
+              </p>
             </div>
           </div>
         </div>
@@ -255,9 +270,9 @@
           <div
             class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800 text-lg"
           >
-          <h2
-          class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
-        >
+            <h2
+              class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
+            >
               My story
             </h2>
             <p class="m-2 text-lg">
@@ -269,21 +284,21 @@
               professional title Bac +2.
             </p>
             <p class="m-2 text-lg">I will continue to Bac +3 in 2024 - 2025.</p>
-            <br>
-            <br>
+            <br />
+            <br />
             <p
               class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
             >
-              I am looking for
-              internship From April 08th to June 14th 2024
+              I am looking for internship From April 08th to June 14th 2024
             </p>
           </div>
           <div
             class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
           >
-          <h2
-          class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
-        >              Technologies <i class="fa-solid fa-microchip"></i>
+            <h2
+              class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+            >
+              Technologies <i class="fa-solid fa-microchip"></i>
             </h2>
             <div class="grid items-center">
               <div class="flex justify-center m-2">
@@ -363,17 +378,28 @@
           <div
             class="bg-transparent row-span-1 col-span-1 p-4 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
           >
-          <h2
-          class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
-        >              Who am I
-              
-            </h2>
-            <p class="m-2 text-lg"></p>
             <h2
-            class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
-          >
-            Centres d'intérêts
-          </h2>
+              class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+            >
+              Who am I
+            </h2>
+            <p class="p-2 m-2 text-lg text-center">
+              <span class="my-5 p-2">Curiosity</span>
+              <span class="my-5 p-2 whitespace-nowrap">Team spirit</span>
+              <span class="my-5 p-2">Good teacher </span>
+              <span class="m-5 p-2">Serious</span>
+            </p>
+            <h2
+              class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
+            >
+              Hobbies and interests
+            </h2>
+            <p class="p-2 m-2 text-lg text-center">
+              <span class="my-5 p-2">Weightlifting</span>
+              <span class="my-5 p-2">Mountains</span>
+              <span class="my-5 p-2">New technologies</span>
+              <span class="my-5 p-2">Sciences</span>
+            </p>
           </div>
         </div>
       </div>
@@ -417,8 +443,7 @@
           class="border-solid border-2 border-sky-800 xl:p-10 p-5 rounded-lg max-h-64 text-center w-72 xl:w-80"
         >
           <h2 class="text-center pb-5">Bagueton (App)</h2>
-          <span class="text-sky-800">Type:</span> <span>Android App</span
-          ><br />
+          <span class="text-sky-800">Type:</span> <span>Android App</span><br />
           <span class="text-sky-800">For:</span> <span>Training</span>
           <br />
           <span class="text-sky-800">Tech:</span><span> Kotlin</span><br />
@@ -437,8 +462,7 @@
           <h2 class="text-center pb-5">Bagueton</h2>
           <span class="text-sky-800">Type:</span> <span> Website</span>
           <br /><span class="text-sky-800">For:</span
-          ><span> Training (Promotional)</span> <br /><span
-            class="text-sky-800"
+          ><span> Training (Promotional)</span> <br /><span class="text-sky-800"
             >Tech:</span
           ><span> Vuejs, TailwindCSS</span><br />
           <span class="text-sky-800">Github: </span
