--- a/index_french.html
+++ b/index_french.html
@@ -47,7 +47,9 @@
         >
           <a href="#introduction_mobile">Introduction</a>
         </li>
-        <li class="my-2 max-sm:m-2 sm:mx-10 duration-300 hover:text-cyan-500 hover:scale-110">
+        <li
+          class="my-2 max-sm:m-2 sm:mx-10 duration-300 hover:text-cyan-500 hover:scale-110"
+        >
           <a href="#projects">Projets</a>
         </li>
         <li
@@ -123,59 +125,132 @@
               <div
                 class="bg-transparent row-span-2 col-span-1 p-2 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
               >
-              <h2
-                class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
-              >
-                Mon parcours
-              </h2>
-              <p class="m-2">
-                Après plusieurs années comme artisan boulanger, j'ai décidé de
-                suivre ma passion pour l'informatique.
-              </p>
-              <p class="m-2">
-                Actuellement en formation Développeur Web & Web Mobile (titre à
-                finalité professionnelle de niveau 5 - Bac+2)
-              </p>
-              <p class="m-2">
-                Ensuite, je souhaite poursuivre mes études par une licence
-                professionnelle, en alternance.
-              </p>
-              <p
-                class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
-              >
-                <br />
-                <br />
+                <h2
+                  class="rounded-lg text-slate-50 bg-sky-800 mb-10 text-center text-xl m-2"
+                >
+                  Mon parcours
+                </h2>
+                <p class="m-2 text-lg ">
+                  Après plusieurs années comme artisan boulanger, j'ai décidé de
+                  suivre ma passion pour l'informatique.
+                </p>
+                <p class="m-2 text-lg ">
+                  Actuellement en formation Développeur Web & Web Mobile (titre
+                  à finalité professionnelle de niveau 5 - Bac+2)
+                </p>
+                <p class="m-2 text-lg ">
+                  Ensuite, je souhaite poursuivre mes études par une licence
+                  professionnelle, en alternance.
+                </p>
+                <p
+                  class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
+                >
+                  <br />
+                  <br />
 
-                Je recherche un stage <br />
-                <br />
-                <br />
-                du 08 avril au 14 juin 2024.
-              </p>
+                  Je recherche un stage <br />
+                  <br />
+                  <br />
+                  du 08 avril au 14 juin 2024.
+                </p>
               </div>
               <div
-              class="bg-transparent row-span-1 col-span-1 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
-            >
-              <h2
-                class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+                class="bg-transparent row-span-1 col-span-1 p-2 text-slate-50 border-b-2 border rounded-lg border-sky-800"
               >
-                Qui suis-je ?
-              </h2>
+                <h2
+                  class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+                >
+                  Technologies <i class="fa-solid fa-microchip"></i>
+                </h2>
+                <div class="flex justify-center m-2">
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_android.svg"
+                    alt="Android"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_css3-wordmark.svg"
+                    alt="CSS3"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_docker.svg"
+                    alt="Docker"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_figma.svg"
+                    alt="Figma"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_kotlin.svg"
+                    alt="Kotlin"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_nodejs-wordmark.svg"
+                    alt="Node.js"
+                    class="m-2 sm:m-1"
+                  />
+                </div>
+                <div class="flex justify-center m-2">
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_sass.svg"
+                    alt="Sass"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_tailwindcss.svg"
+                    alt="Tailwind CSS"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_vscode.svg"
+                    alt="VS Code"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/devicon_vuejs.svg"
+                    alt="Vue.js"
+                    class="m-2 sm:m-1"
+                  />
+                  <img
+                    src="./Portfolio_v3t/src/img/techno/logos_javascript.svg"
+                    alt="JavaScript"
+                    class="m-2 sm:m-1"
+                  />
+                </div>
+              </div>
+              <div
+                class="bg-transparent row-span-1 col-span-1 text-slate-50 border-b-2 border-2 rounded-lg border-sky-800"
+              >
+                <h2
+                  class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
+                >
+                  Qui suis-je ?
+                </h2>
 
-              <p class="p-2 m-2 text-lg text-center">
-                <span class="my-5 p-2">Curiosité</span>
-                <span class="my-5 p-2 whitespace-nowrap">Esprit d'équipe</span>
-                <span class="my-5 p-2">Pédagogue</span>
-                <span class="m-5 p-2">Sérieux</span>
-              </p>
-              <h2
-                class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
-              >
-                Centres d'intérêts
-              </h2>
-              <p class="m-2 text-lg text-center">
-                Musculation, Montagne, Nouvelles technologies, Sciences
-              </p>
-            </div>
+                <p class="p-2 m-2 text-lg text-center">
+                  <span class="my-5 p-2">Curiosité</span>
+                  <span class="my-5 p-2 whitespace-nowrap"
+                    >Esprit d'équipe</span
+                  >
+                  <span class="my-5 p-2">Pédagogue</span>
+                  <span class="m-5 p-2">Sérieux</span>
+                </p>
+                <h2
+                  class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
+                >
+                  Centres d'intérêts
+                </h2>
+                <p class="m-2 text-lg text-center">
+                  <span class="my-5 p-2">Musculation</span>
+                  <span class="my-5 p-2">Montagne</span>
+                  <span class="my-5 p-2">Nouvelles technologies</span>
+                  <span class="my-5 p-2">Science</span>
+                </p>
+              </div>
             </div>
           </div>
         </div>
