--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <p
               class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
             >
-              I am looking for internship From April 08th to June 14th 2024
+              I am looking for internship<br><br> From April 08th to June 14th 2024
             </p>
           </div>
           <div
