--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <p
                 class="m-2 text-lg text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
               >
-                I am looking for internship From April 08th to June 14th 2024
+                I am looking for an internship From April 08th to June 14th 2024
               </p>
             </div>
             <div
@@ -224,8 +224,8 @@
               <p class="p-2 m-2 text-lg text-center">
                 <span class="my-5 p-2">Curiosity</span>
                 <span class="my-5 p-2 whitespace-nowrap">Team spirit</span>
-                <span class="my-5 p-2">Good teacher </span>
-                <span class="m-5 p-2">Serious</span>
+                <span class="my-5 p-2">Good teaching skills </span>
+                <span class="m-5 p-2">Conscientious</span>
               </p>
               <h2
                 class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
@@ -289,7 +289,7 @@
             <p
               class="m-2 text-xl text-center text-transparent bg-clip-text bg-gradient-to-r to-blue-400 from-cyan-500"
             >
-              I am looking for internship<br><br> From April 08th to June 14th 2024
+              I am looking for an internship<br><br> From April 08th to June 14th 2024
             </p>
           </div>
           <div
@@ -381,13 +381,13 @@
             <h2
               class="rounded-lg text-slate-50 bg-sky-800 text-center text-xl m-2"
             >
-              Who am I
+              Who I am
             </h2>
             <p class="p-2 m-2 text-lg text-center">
               <span class="my-5 p-2">Curiosity</span>
               <span class="my-5 p-2 whitespace-nowrap">Team spirit</span>
-              <span class="my-5 p-2">Good teacher </span>
-              <span class="m-5 p-2">Serious</span>
+              <span class="my-5 p-2 whitespace-nowrap">Good teaching skills </span>
+              <span class="m-5 p-2">Conscientious</span>
             </p>
             <h2
               class="rounded-lg text-slate-50 bg-sky-800 text-center m-2 text-xl"
@@ -397,7 +397,7 @@
             <p class="p-2 m-2 text-lg text-center">
               <span class="my-5 p-2">Weightlifting</span>
               <span class="my-5 p-2">Mountains</span>
-              <span class="my-5 p-2">New technologies</span>
+              <span class="my-5 p-2 whitespace-nowrap">New technologies</span>
               <span class="my-5 p-2">Sciences</span>
             </p>
           </div>
@@ -436,7 +436,7 @@
               >
               </i></a
             ><br />
-            <span class="text-sky-800">Statuts:</span> En production(Beta)
+            <span class="text-sky-800">Statuts:</span> In production(Beta)
           </div>
         </div>
         <div
