changement techno & cv

--- a/index_french.html
+++ b/index_french.html
@@ -211,8 +211,8 @@
                     class="m-2 sm:m-1"
                   />
                   <img
-                    src="./Portfolio_v3t/src/img/techno/devicon_vuejs.svg"
-                    alt="Vue.js"
+                    src="Portfolio_v3t/src/img/techno/devicon_react.svg"
+                    alt="React.js"
                     class="m-2 sm:m-1"
                   />
                   <img
@@ -386,9 +386,9 @@
                     class="m-2 max-md:m-1"
                   />
                   <img
-                    src="./Portfolio_v3t/src/img/techno/devicon_vuejs.svg"
-                    alt="Vue.js"
-                    title="Vue"
+                    src="Portfolio_v3t/src/img/techno/devicon_react.svg"
+                    alt="React.js"
+                    title="React"
                     class="m-2 max-md:m-1"
                   />
                 </div>
@@ -485,7 +485,7 @@
             ><span> Training (Promotional)</span> <br /><span
               class="text-sky-800"
               >Tech:</span
-            ><span> Vuejs, TailwindCSS</span><br />
+            ><span> Reactjs, TailwindCSS</span><br />
             <span class="text-sky-800">Github: </span
             ><a
               href="https://github.com/CedricSanchezGithub/fil_rouge"
